--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: "AI Commit Message Generator"
+name: "AI  Message Generator"
 description: "Generate clean commit messages using AI (Supports Turkish & English)"
 author: "your-name-or-org"
 branding:
